tests/integration/options/options_per_cli/input_path/02_invalid_path/test.itest
RUN: %expect_exit 1 %strictdoc export /path/does/not/exist | filecheck %s --dump-input=fail
RUN: %expect_exit 1 %strictdoc server /path/does/not/exist | filecheck %s --dump-input=fail

CHECK: error: Provided input path does not exist: {{.*}}/path/does/not/exist
